--- a/html/userLogin.html
+++ b/html/userLogin.html
@@ -37,5 +37,7 @@
         </div>
     </div>
 
+    <script src="../js/serialize.js"></script>
+    <script src="../js/userLogin.js"></script>
 </body>
 </html>
