test getAll project/personal

--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -5,6 +5,9 @@
     <title>User Profile</title>
 </head>
 <body>
-<!-- TODO Fix this -->
+
+<div class="personal"></div>
+
+<script src="../js/myProfile.js"></script>
 </body>
 </html>
