changes to make project testable locally (avoid push/pull all the time)

--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -8,6 +8,7 @@
 
 <div class="personal"></div>
 
-<script src="../js/myProfile.js"></script>
+    <script src="../constants.js"></script>
+    <script src="../js/myProfile.js"></script>
 </body>
 </html>
