--- a/html/userLogin.html
+++ b/html/userLogin.html
@@ -13,7 +13,7 @@
 
         <div class="forms">
             <h3>Login</h3>
-            <form id="login" action="http://10.114.32.29/foliohub/auth/login" method="post">
+            <form id="login" action="" method="post">
                 <div>
                     <label>Email:</label>
                     <input type="email" placeholder="example@test.com" name="username">
@@ -37,6 +37,7 @@
         </div>
     </div>
 
+    <script src="../constants.js"></script>
     <script src="../js/serialize.js"></script>
     <script src="../js/userLogin.js"></script>
 </body>
