--- a/html/editProfile.html
+++ b/html/editProfile.html
@@ -11,6 +11,6 @@
 <!-- TODO Information to include Name, MemberSinceDate, DeveloperType, ProLanguages,
     TODO list of all users apps
 -->
-
+<script src="../constants.js"></script>
 </body>
 </html>
