--- a/html/home.html
+++ b/html/home.html
@@ -27,6 +27,7 @@
         </div>
 
     </div>
+    <script src="../constants.js"></script>
     <script src="../js/home.js"></script>
 </body>
 </html>
