account creation and extra html css + account creation js

--- a/html/projectUpload.html
+++ b/html/projectUpload.html
@@ -8,6 +8,21 @@
 </head>
 <body>
 
+    <header class="normal-header">
+        <div class="column">
+            <div class="row">
+                <div class="menu-icon">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
+                <img class="header-logo" src="">
+
+            </div>
+
+        </div>
+    </header>
+
     <div class="container">
 
         <div class="menu">
