--- a/html/accountCreate.html
+++ b/html/accountCreate.html
@@ -8,37 +8,23 @@
 </head>
 <body>
 
-<div class="container">
+<img id="logo" src="../images/logo.png" alt="logo">
 
-    <div class="menu">
-        <img id="logo" src="../images/logo.png" alt="logo">
-        <h2 id="title">Register</h2>
+<h1>Welcome to FolioHub</h1>
+
+<form id="register">
+    <div id="regForm">
+        <input required class="mainMobileInput" type="email" placeholder="Enter Email..." name="email">
+        <input required class="mainMobileInput" type="email" placeholder="Confirm Email..." name="emailC">
+        <input required class="mainMobileInput" type="password" placeholder="Enter Password..." name="password">
+        <input required class="mainMobileInput" type="password" placeholder="Confirm Password..." name="passwordC">
+        <input id="timestampHidden" type="text" name="creationDate">
     </div>
-
-
-    <form id="register">
-        <div id="regProfilePic">
-            <label for="image-upload" class="custom-file-upload">
-                <i></i> +
-            </label>
-            <input id="image-upload" type="file" placeholder="Photo" name="profilePic">
-        </div>
-        <div id="regForm">
-            <input type="text" placeholder="Enter Username..." name="username">
-            <input type="text" placeholder="Enter Title..." name="title">
-            <input type="email" placeholder="Enter Email..." name="email">
-            <input type="email" placeholder="Confirm Email..." name="emailC">
-            <input type="password" placeholder="Enter Password..." name="password">
-            <input type="password" placeholder="Confirm Password..." name="passwordC">
-            <textarea maxlength="150" id="description" placeholder="Short description..." name="description"></textarea>
-            <input type="text" placeholder="GitHub" name="github...">
-            <input type="text" placeholder="Add Tags" name="personalTags...">
-        </div>
-        <div class="button">Save</div>
-    </form>
-
-</div>
+    <button type="submit" class="mainMobileButton">NEXT</button>
+</form>
 
 <script src="../constants.js"></script>
+<script src="../js/serialize.js"></script>
+<script src="../js/accountCreate.js"></script>
 </body>
 </html>
