home page changes
structer of projectDetails started

--- a/html/home.html
+++ b/html/home.html
@@ -16,7 +16,18 @@
             <img id="profilePic" src="../images/profilePic.png">
         </div>
 
-        <input type="text" placeholder="Search" id="searchBar">
+        <input type="text" placeholder="Search..." id="searchBar">
+
+        <ul id="tags">
+            <li id="all">All</li>
+            <li id="android">Android</li>
+            <li id="ios">iOS</li>
+            <li id="web">Web</li>
+            <li id="windows">Windows</li>
+            <li id="mac">Mac</li>
+            <li id="linux">Linux</li>
+            <li id="other">Other</li>
+        </ul>
 
         <div class="projects">
             <h2>Projects</h2>
