--- a/html/projectDetails.html
+++ b/html/projectDetails.html
@@ -11,20 +11,40 @@
     <div class="container">
 
         <div class="menu">
-            <img id="logo" src="../images/logo.png">
+            <img id="logo" src="../images/logo.png" alt="FolioHub Logo">
             <h1>FolioHub</h1>
-            <img id="profilePic" src="../images/profilePic.png">
+            <img id="profilePic" src="../images/profilePic.png" alt="User Profile Pic">
         </div>
 
         <div class="projectDetails">
-            <h2>Project</h2>
-            <ul id="projectList">
-                <!-- home.js creates project list here-->
-            </ul>
+            <!-- projectDetails.js creates elements here -->
+            <div id="appOverview">
+                <!-- Initial card that shows Logo, Name, Votes, Tags, Author, Short Description -->
+                <div id="appOverviewTop">
+                    <!-- Logo, Name, Votes, Tags, Author -->
+                </div>
+                <div id="appOverviewBottom">
+                    <!-- description and dowload -->
+                </div>
 
+            </div>
+
+            <div id="media">
+                <!-- section for app videos and images -->
+            </div>
+
+            <div id="comments">
+                <!-- section for app comments -->
+            </div>
+
+            <div id="moreInfo">
+                <!-- shows additional information -->
+            </div>
         </div>
 
     </div>
+
+    <script src="../js/projectDetails.js"></script>
 
 </body>
 </html>
