home page + project upload

--- a/html/home.html
+++ b/html/home.html
@@ -10,38 +10,42 @@
 
 <div class="menuMobile">
     <div class="menuTopRow">
-        <div class="menuButton">
+        <div class="logo-container">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
         </div>
         <img id="logo" src="../images/logo.png">
-        <img id="profilePic" src="../images/profilePic.png">
+        <div class="logo-container">
+            <img id="profilePic" src="../images/login.png">
+        </div>
+
     </div>
     <input type="text" placeholder="Search..." id="searchBar"></input>
 </div>
 
-
-
-<div class="scrollmenu">
-    <input type="checkbox" id="a"></input><label for="a">All</label>
-    <input type="checkbox" id="b"></input><label for="b">Android</label>
-    <input type="checkbox" id="c"></input><label for="c">iOS</label>
-    <input type="checkbox" id="d"></input><label for="d">Web</label>
-    <input type="checkbox" id="e"></input><label for="e">Windows</label>
-    <input type="checkbox" id="f"></input><label for="f">Mac</label>
-    <input type="checkbox" id="g"></input><label for="g">Linux</label>
-    <input type="checkbox" id="h"></input><label for="h">Other</label>
-</div>
+<!--<div class="scrollmenu">-->
+<!--    <input type="checkbox" id="a"></input><label for="a">All</label>-->
+<!--    <input type="checkbox" id="b"></input><label for="b">Android</label>-->
+<!--    <input type="checkbox" id="c"></input><label for="c">iOS</label>-->
+<!--    <input type="checkbox" id="d"></input><label for="d">Web</label>-->
+<!--    <input type="checkbox" id="e"></input><label for="e">Windows</label>-->
+<!--    <input type="checkbox" id="f"></input><label for="f">Mac</label>-->
+<!--    <input type="checkbox" id="g"></input><label for="g">Linux</label>-->
+<!--    <input type="checkbox" id="h"></input><label for="h">JavaScript</label>-->
+<!--    <input type="checkbox" id="i"></input><label for="i">C</label>-->
+<!--    <input type="checkbox" id="j"></input><label for="j">Other</label>-->
+<!--</div>-->
 
 
 <div class="projects">
-    <h2>Projects</h2>
     <ul id="projectList">
         <!-- home.js creates project inputs here-->
     </ul>
 
 </div>
+
+<button id="load-more">more projects</button>
 
 <script src="../constants.js"></script>
 <script src="../js/home.js"></script>
