--- a/html/home.html
+++ b/html/home.html
@@ -10,7 +10,7 @@
 
 <div class="menuMobile">
     <div class="menuTopRow">
-        <div class="logo-container">
+        <div class="logo-container" onclick="openDrawer()">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
@@ -24,6 +24,40 @@
     <input type="text" placeholder="Search..." id="searchBar"></input>
 </div>
 
+<div id="side-menu" class="side-nav">
+    <a href="#" id="btn-close" onclick="closeDrawer()">&times;</a>
+    <div id="drawer-user-info">
+        <img id="drawer-pic" src="../images/login.png" alt="drawer-pic">
+        <h1>Username</h1>
+    </div>
+
+    <a href="myProfile.html">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/portfolio.png" alt="">
+            <p>My projects</p>
+        </div>
+    </a>
+    <a href="projectUpload.html">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/upload.png" alt="">
+            <p>Upload project</p>
+        </div>
+    </a>
+    <a href="#">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/share.png" alt="">
+            <p>Share project</p>
+        </div>
+    </a>
+    <a class="drawer-settings" href="#">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/settings.png" alt="">
+            <p>Settings & Account</p>
+        </div>
+    </a>
+</div>
+
+
 <!--<div class="scrollmenu">-->
 <!--    <input type="checkbox" id="a"></input><label for="a">All</label>-->
 <!--    <input type="checkbox" id="b"></input><label for="b">Android</label>-->
@@ -36,7 +70,6 @@
 <!--    <input type="checkbox" id="i"></input><label for="i">C</label>-->
 <!--    <input type="checkbox" id="j"></input><label for="j">Other</label>-->
 <!--</div>-->
-
 
 <div class="projects">
     <ul id="projectList">
