--- a/html/accountCreateExtra.html
+++ b/html/accountCreateExtra.html
@@ -12,12 +12,12 @@
 
     <img id="logo" src="../images/logo.png" alt="logo">
 
-    <form id="register">
+    <form id="register" enctype="multipart/form-data">
         <div id="regProfilePic">
             <label for="image-upload" class="custom-file-upload">
                 <i></i> +
             </label>
-            <input id="image-upload" type="file" placeholder="Photo" name="profilePic">
+            <input id="image-upload" type="file" placeholder="Photo" accept="image/*" name="profilePic">
         </div>
         <div id="regForm">
             <input required class="mainMobileInput" type="text" placeholder="Enter Username..." name="username">
