added sidebar functionality to myProfile
also added home option (still needs icon)

--- a/html/home.html
+++ b/html/home.html
@@ -31,6 +31,12 @@
         <h1>Username</h1>
     </div>
 
+    <a href="home.html">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/home" alt="">
+            <p>Home</p>
+        </div>
+    </a>
     <a href="myProfile.html">
         <div class="drawer-item">
             <img class="drawer-item-logo" src="../images/portfolio.png" alt="">
