--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -10,13 +10,52 @@
 
 <div class="menuMobile">
     <div class="menuTopRow">
-        <div class="menuButton">
+        <div class="logo-container" onclick="openDrawer()">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
         </div>
         <img id="logo" src="../images/logo.png">
     </div>
+</div>
+
+<div id="side-menu" class="side-nav">
+    <a href="#" id="btn-close" onclick="closeDrawer()">&times;</a>
+    <div id="drawer-user-info">
+        <img id="drawer-pic" src="../images/login.png" alt="drawer-pic">
+        <h1>Username</h1>
+    </div>
+
+    <a href="home.html">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/home" alt="">
+            <p>Home</p>
+        </div>
+    </a>
+    <a href="myProfile.html">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/portfolio.png" alt="">
+            <p>My projects</p>
+        </div>
+    </a>
+    <a href="projectUpload.html">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/upload.png" alt="">
+            <p>Upload project</p>
+        </div>
+    </a>
+    <a href="#">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/share.png" alt="">
+            <p>Share project</p>
+        </div>
+    </a>
+    <a class="drawer-settings" href="#">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/settings.png" alt="">
+            <p>Settings & Account</p>
+        </div>
+    </a>
 </div>
 
 <div class="user">
