--- a/html/projectUpload.html
+++ b/html/projectUpload.html
@@ -29,6 +29,12 @@
         <h1>Username</h1>
     </div>
 
+    <a href="home.html">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/home" alt="">
+            <p>Home</p>
+        </div>
+    </a>
     <a href="myProfile.html">
         <div class="drawer-item">
             <img class="drawer-item-logo" src="../images/portfolio.png" alt="">
