project details modified
prepared for project media

--- a/html/projectDetails.html
+++ b/html/projectDetails.html
@@ -21,7 +21,7 @@
         </div>
 
     </div>
-    <input type="text" placeholder="Search..." id="searchBar"></input>
+    <input type="text" placeholder="Search..." id="searchBar">
 </div>
 
 <div id="side-menu" class="side-nav">
@@ -63,7 +63,52 @@
     </a>
 </div>
 
-<div id="app-info-card">
+<div id="projectDetails">
+
+    <div id="appOverview">
+
+        <div id="appOverviewTop">
+
+        </div>
+        <div id="appOverviewBottom">
+
+        </div>
+    </div>
+
+    <div id="media">
+
+        <!-- TODO project media will appear here -->
+
+    </div>
+
+    <div id="appLongDescription">
+
+        <!-- TODO Longer Description of project goes here -->
+
+    </div>
+
+    <div id="comments">
+
+        <!-- TODO project comments will appear here -->
+
+    </div>
+
+    <div id="moreInfo">
+
+        <!-- TODO extra project information here -->
+
+    </div>
+
+    <div id="similarApps">
+
+        <!-- TODO similar apps appear here -->
+
+    </div>
+
+</div>
+
+
+<!--<div id="app-info-card">
 
     <div id="card-top-row">
         <img id="card-logo"
@@ -72,8 +117,8 @@
         <div id="card-details">
             <h2>Title</h2>
             <p>Author</p>
-            <div id="card-tags">
-                <!--                tags to be added here-->
+            <div id="card-tags2">
+
             </div>
         </div>
         <div id="card-likes">
@@ -86,13 +131,12 @@
         <h5>Description</h5>
         <p id="projectShortDesc"></p>
     </div>
-</div>
+</div>-->
 <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-<script src="../js/projectDetails.js"></script>
-
 <script src="../constants.js"></script>
+<script src="../js/projectDetails.js"></script>
 </body>
 </html>
