fixing put user and continuing put project

--- a/html/accountCreateExtra.html
+++ b/html/accountCreateExtra.html
@@ -5,6 +5,7 @@
     <title>Account Creation</title>
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/accountCreateExtra.css" rel="stylesheet">
+    <link href="../images/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
 
@@ -31,7 +32,6 @@
         </div>
         <button type="submit" class="mainMobileButton">Save</button>
     </form>
-
 
     <script src="../constants.js"></script>
     <script src="../js/serialize.js"></script>
