--- a/html/userLogin.html
+++ b/html/userLogin.html
@@ -5,6 +5,7 @@
     <title>User Login</title>
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/userLogin.css" rel="stylesheet">
+    <link href="../images/favicon.ico" type="image/x-icon" rel="icon">
 </head>
 <body>
 
