--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -5,6 +5,7 @@
     <title>User Profile</title>
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/myProfile.css" rel="stylesheet">
+    <link href="../images/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
 
@@ -28,7 +29,7 @@
 
     <a href="home.html">
         <div class="drawer-item">
-            <img class="drawer-item-logo" src="../images/home" alt="">
+            <img class="drawer-item-logo" src="../images/home.png" alt="">
             <p>Home</p>
         </div>
     </a>
