--- a/html/projectUpload.html
+++ b/html/projectUpload.html
@@ -5,6 +5,7 @@
     <title>Project Upload</title>
     <link href="../css/general.css" rel="stylesheet">
     <link href="../css/projectUpload.css" rel="stylesheet">
+    <link href="../images/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
 
@@ -31,7 +32,7 @@
 
     <a href="home.html">
         <div class="drawer-item">
-            <img class="drawer-item-logo" src="../images/home" alt="">
+            <img class="drawer-item-logo" src="../images/home.png" alt="">
             <p>Home</p>
         </div>
     </a>
@@ -77,7 +78,7 @@
     <h3>Add a video</h3>
 
     <div id="projectVideo">
-        <label for="image-upload" class="custom-file-upload">
+        <label for="video-upload" class="custom-file-upload">
             <i></i> +
         </label>
         <input id="video-upload" type="file" placeholder="Photo" name="video">
@@ -86,10 +87,10 @@
     <h3>Add pictures</h3>
 
     <div id="projectPictures">
-        <label for="image-upload" class="custom-file-upload">
+        <label for="pictures-upload" class="custom-file-upload">
             <i></i> +
         </label>
-        <input id="pictures-upload" type="file" placeholder="Photo" name="images">
+        <input id="pictures-upload" type="file" multiple="multiple" placeholder="Photo" accept="image/*" name="images">
     </div>
 
     <div id="uploadedPictures">
