project post done + my profile design

--- a/html/projectUpload.html
+++ b/html/projectUpload.html
@@ -68,20 +68,26 @@
         <label for="image-upload" class="custom-file-upload">
             <i></i> +
         </label>
-        <input id="image-upload" type="file" placeholder="Photo" name="projectPic">
+        <input id="image-upload" type="file" placeholder="Photo" name="logo">
     </div>
     <input class="mainMobileInput" id="projectName" type="text" placeholder="Project Name" name="name">
     <textarea class="mainMobileInput" maxlength="60" id="shortDescTextArea"
-              placeholder="Short description" name="description"></textarea>
+              placeholder="Short description" name="outline"></textarea>
     <input class="mainMobileInput" placeholder="Add tags" name="tags">
 
     <h3>Add a video</h3>
 
     <div id="projectVideo">
-        <label for="video-upload" class="custom-file-upload">
-            <i></i> +
-        </label>
-        <input id="video-upload" type="file" placeholder="Photo" name="video">
+        <div class="add-youtube-search">
+            <input class="mainMobileInput"  id="video-upload" type="text" placeholder="Add a youtube video URL" name="video">
+            <button class="mainMobileButton" id="add-youtube-video">Check</button>
+            <button class="mainMobileButton" id="remove-youtube-video">Remove</button>
+        </div>
+
+        <div class="video-wrapper">
+
+        </div>
+
     </div>
 
     <h3>Add pictures</h3>
@@ -97,7 +103,7 @@
         <!-- Uploaded images show up here -->
     </div>
 
-    <textarea class="mainMobileInput" id="longDescTextArea" placeholder="Longer description"></textarea>
+    <textarea class="mainMobileInput" id="longDescTextArea" placeholder="Longer description" name="description"></textarea>
 
     <div id="div-private">
         <input type="checkbox" id="private"/><label id="checkbox-text" for="private">Private</label>
