--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -94,6 +94,19 @@
 </div>
 
 <ul id="userProjects">
+<!--    <a href="">-->
+<!--        <li id="projectCard">-->
+<!--            <figure id="projectImg">-->
+<!--                <img src="" alt="">-->
+<!--            </figure>-->
+<!--            <div id="projectDetailDiv">-->
+<!--                <div id="editBtn">Edit</div>-->
+<!--                <h3 id="projectName">Name</h3>-->
+<!--                <p id="shortDesc">Desc</p>-->
+<!--                <p id="date">Creation date</p>-->
+<!--            </div>-->
+<!--        </li>-->
+<!--    </a>-->
     <!-- User projects are loaded here -->
 </ul>
 
