update projects works + general.js + project details changes

--- a/html/home.html
+++ b/html/home.html
@@ -87,6 +87,7 @@
 
 <button id="load-more">more projects</button>
 
+<script src="../js/general.js"></script>
 <script src="../constants.js"></script>
 <script src="../js/home.js"></script>
 </body>
