--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -110,7 +110,7 @@
     <!-- User projects are loaded here -->
 </ul>
 
-
+<script src="../js/general.js"></script>
 <script src="../constants.js"></script>
 <script src="../js/myProfile.js"></script>
 
