--- a/html/userLogin.html
+++ b/html/userLogin.html
@@ -23,6 +23,7 @@
     <a href="accountCreate.html">Create a new account</a>
 </div>
 
+<script src="../js/general.js"></script>
 <script src="../constants.js"></script>
 <script src="../js/serialize.js"></script>
 <script src="../js/userLogin.js"></script>
