--- a/html/accountCreate.html
+++ b/html/accountCreate.html
@@ -22,6 +22,7 @@
     <button type="submit" class="mainMobileButton">NEXT</button>
 </form>
 
+<script src="../js/general.js"></script>
 <script src="../constants.js"></script>
 <script src="../js/serialize.js"></script>
 <script src="../js/accountCreate.js"></script>
