--- a/html/accountCreateExtra.html
+++ b/html/accountCreateExtra.html
@@ -33,6 +33,7 @@
         <button type="submit" class="mainMobileButton">Save</button>
     </form>
 
+    <script src="../js/general.js"></script>
     <script src="../constants.js"></script>
     <script src="../js/serialize.js"></script>
     <script src="../js/accountCreateExtra.js"></script>
