--- a/html/projectDetails.html
+++ b/html/projectDetails.html
@@ -33,7 +33,7 @@
 
     <a href="home.html">
         <div class="drawer-item">
-            <img class="drawer-item-logo" src="../images/home" alt="">
+            <img class="drawer-item-logo" src="../images/home.png" alt="">
             <p>Home</p>
         </div>
     </a>
@@ -75,7 +75,13 @@
         </div>
     </div>
 
-    <div id="media">
+    <div id="videoMedia">
+
+        <!-- TODO project media will appear here -->
+
+    </div>
+
+    <div id="imageMedia">
 
         <!-- TODO project media will appear here -->
 
@@ -107,35 +113,7 @@
 
 </div>
 
-
-<!--<div id="app-info-card">
-
-    <div id="card-top-row">
-        <img id="card-logo"
-             src="https://cdn.dribbble.com/users/7102209/screenshots/15496443/media/6689a1b6ac4a47c1b94cab5702e10bd9.png?compress=1&resize=400x300"
-             alt="logo">
-        <div id="card-details">
-            <h2>Title</h2>
-            <p>Author</p>
-            <div id="card-tags2">
-
-            </div>
-        </div>
-        <div id="card-likes">
-            <img id="arrow-up" src="../images/arrow-up.png" alt="up-arrow"/>
-            <div id="card-like-count">9999</div>
-            <img id="arrow-down" src="../images/arrow-down.png" alt="down-arrow"/>
-        </div>
-    </div>
-    <div id="card-bottom-row">
-        <h5>Description</h5>
-        <p id="projectShortDesc"></p>
-    </div>
-</div>-->
-<div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-
+<script src="../js/general.js"></script>
 <script src="../constants.js"></script>
 <script src="../js/projectDetails.js"></script>
 </body>
