--- a/html/projectDetails.html
+++ b/html/projectDetails.html
@@ -10,7 +10,7 @@
 
 <div class="menuMobile">
     <div class="menuTopRow">
-        <div class="logo-container" onclick="openDrawer()">
+        <div id="menuBtn" class="logo-container" onclick="openDrawer()">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
@@ -58,7 +58,7 @@
     <a class="drawer-settings" href="#">
         <div class="drawer-item">
             <img class="drawer-item-logo" src="../images/settings.png" alt="">
-            <p>Settings & Account</p>
+            <p>Account settings</p>
         </div>
     </a>
 </div>
@@ -113,8 +113,8 @@
 
 </div>
 
-<script src="../js/general.js"></script>
 <script src="../constants.js"></script>
+<script src="../js/general.js"></script>
 <script src="../js/projectDetails.js"></script>
 </body>
 </html>
