--- a/html/accountCreateExtra.html
+++ b/html/accountCreateExtra.html
@@ -24,7 +24,7 @@
             <input required class="mainMobileInput" type="text" placeholder="Enter Username..." name="username">
             <input class="mainMobileInput" type="text" placeholder="Enter Title..." name="title">
             <textarea class="mainMobileInput" id="descTextArea"  maxlength="60" placeholder="Short description..." name="description"></textarea>
-            <input class="mainMobileInput" type="text" placeholder="GitHub" name="github">
+            <input class="mainMobileInput" type="text" placeholder="GitHub / GitLab" name="github">
             <input class="mainMobileInput" type="text" placeholder="Add Tags" name="tags">
             <input id="dateInput" class="hidden-input" type="text" name="creationDate">
             <input id="usernameInput" class="hidden-input" type="text" name="email">
@@ -33,8 +33,8 @@
         <button type="submit" class="mainMobileButton">Save</button>
     </form>
 
-    <script src="../js/general.js"></script>
     <script src="../constants.js"></script>
+    <script src="../js/general.js"></script>
     <script src="../js/serialize.js"></script>
     <script src="../js/accountCreateExtra.js"></script>
 </body>
