logoutBtn added to myProfile and projectDetails

--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -57,6 +57,12 @@
             <p>Account settings</p>
         </div>
     </a>
+    <a class="drawer-logout" href="#">
+        <div class="drawer-item">
+            <img class="drawer-item-logo" src="../images/logout.png" alt="">
+            <p>Logout</p>
+        </div>
+    </a>
 </div>
 
 <div class="user">
