--- a/html/myProfile.html
+++ b/html/myProfile.html
@@ -74,7 +74,7 @@
         <p id="memberSince">Member Since</p>
     </div>
 
-    <a href="" id="github"></a>
+    <a href="" id="github" target="_blank"></a>
 
     <p id="userDesc"></p>
 
