--- a/html/accountCreateExtra.html
+++ b/html/accountCreateExtra.html
@@ -21,11 +21,11 @@
             <input id="image-upload" type="file" placeholder="Photo" accept="image/*" name="profilePic">
         </div>
         <div id="regForm">
-            <input required class="mainMobileInput" type="text" placeholder="Enter Username..." name="username">
+            <input required class="mainMobileInput" type="text" maxlength="40" placeholder="Enter Username..." name="username">
             <input class="mainMobileInput" type="text" placeholder="Enter Title..." name="title">
             <textarea class="mainMobileInput" id="descTextArea"  maxlength="60" placeholder="Short description..." name="description"></textarea>
             <input class="mainMobileInput" type="text" placeholder="GitHub / GitLab" name="github">
-            <input class="mainMobileInput" type="text" placeholder="Add Tags" name="tags">
+            <input class="mainMobileInput" type="text" placeholder="tag1,tag2,tag3,..." name="tags">
             <input id="dateInput" class="hidden-input" type="text" name="creationDate">
             <input id="usernameInput" class="hidden-input" type="text" name="email">
             <input id="passwordInput" class="hidden-input" type="text" name="password">
