--- a/html/projectDetails.html
+++ b/html/projectDetails.html
@@ -16,12 +16,11 @@
             <div class="bar"></div>
         </div>
         <img id="logo" src="../images/logo.png">
-        <div class="logo-container">
+        <div class="logo-container" id="profilePicContainer">
             <img id="profilePic" src="../images/login.png">
         </div>
 
     </div>
-    <input type="text" placeholder="Search..." id="searchBar">
 </div>
 
 <div id="side-menu" class="side-nav">
@@ -105,22 +104,24 @@
 
     </div>
 
+    <div class="user" id="user">
+
+    </div>
+
     <div id="moreInfo">
 
         <!-- TODO extra project information here -->
 
     </div>
 
-    <div id="similarApps">
-
-        <!-- TODO similar apps appear here -->
-
-    </div>
-
 </div>
 
 <script src="../constants.js"></script>
-<script src="../js/general.js"></script>
 <script src="../js/projectDetails.js"></script>
+<script src="../js/general.js"></script>
+
+<script>
+
+</script>
 </body>
 </html>
