--- a/html/projectUpload.html
+++ b/html/projectUpload.html
@@ -17,7 +17,7 @@
             <div class="bar"></div>
         </div>
         <img id="logo" src="../images/logo.png">
-        <div class="logo-container">
+        <div class="logo-container" id="profilePicContainer">
             <img id="profilePic" src="../images/login.png">
         </div>
     </div>
@@ -73,13 +73,13 @@
     <input class="mainMobileInput" id="projectName" type="text" placeholder="Project Name" name="name">
     <textarea class="mainMobileInput" maxlength="60" id="shortDescTextArea"
               placeholder="Short description" name="outline"></textarea>
-    <input class="mainMobileInput" placeholder="Add tags" name="tags">
+    <input class="mainMobileInput" placeholder="tag1,tag2,tag3,..." name="tags">
 
     <h3>Add a video</h3>
 
     <div id="projectVideo">
         <div class="add-youtube-search">
-            <input class="mainMobileInput"  id="video-upload" type="text" placeholder="Add a youtube video URL" name="video">
+            <input class="mainMobileInput"  id="video-upload" type="text" placeholder="Add Youtube URL..." name="video">
             <button class="mainMobileButton" id="check-youtube-video">Check</button>
             <button class="mainMobileButton" id="remove-youtube-video">Remove</button>
         </div>
