--- a/html/accountCreate.html
+++ b/html/accountCreate.html
@@ -14,10 +14,12 @@
 
 <form id="register">
     <div id="regForm">
-        <input required class="mainMobileInput" type="email" placeholder="Enter Email..." name="email">
+        <div class="errorMessage" id="errorEmail">Error</div>
+        <div class="errorMessage" id="errorPass">Error</div>
+        <input required class="mainMobileInput" type="email"  placeholder="Enter Email..." name="email">
         <input required class="mainMobileInput" type="email" placeholder="Confirm Email..." name="emailC">
-        <input required class="mainMobileInput" type="password" placeholder="Enter Password..." name="password">
-        <input required class="mainMobileInput" type="password" placeholder="Confirm Password..." name="passwordC">
+        <input required class="mainMobileInput" type="password" placeholder="Enter Password..." minlength="6" name="password">
+        <input required class="mainMobileInput" type="password" placeholder="Confirm Password..." minlength="6" name="passwordC">
     </div>
     <button type="submit" class="mainMobileButton">NEXT</button>
 </form>
